[gd_scene load_steps=16 format=2]

[ext_resource path="res://media/graphics/items.png" type="Texture" id=1]
[ext_resource path="res://objects/Wall Switch.gd" type="Script" id=2]
[ext_resource path="res://media/audio/sfx/switch23.wav" type="AudioStream" id=3]
[ext_resource path="res://shaders/Colorizer.shader" type="Shader" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 6 )

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/AUTO_REPLACE = false
shader_param/IGNORE_ALPHA = false
shader_param/COLOR_A = Color( 1, 1, 1, 1 )
shader_param/COLOR_A_REPLACEMENT = Color( 1, 1, 1, 1 )
shader_param/COLOR_B = Color( 0, 0, 0, 1 )
shader_param/COLOR_B_REPLACEMENT = Color( 0, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 8, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 8, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 16, 8, 8, 8 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "On",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Off",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "SwitchOff",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "SwitchOn",
"speed": 8.0
} ]

[node name="Wall Switch" type="Area2D"]
collision_layer = 256
collision_mask = 512
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 11 )
frames = SubResource( 10 )
animation = "Off"
playing = true

[node name="AudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 100.0
bus = "SFX"
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animation_finished"]
